@@ -1,3 +1,9 @@
+2008-02-10  Wakaba  <wakaba@suika.fam.cx>
+
+	* ContentChecker.pm (check_document, check_element): Support
+	for second argument ($onsubdoc).
+	(_get_css_parser): Removed (now it is part of WDCC).
+
 2008-02-09  Wakaba  <wakaba@suika.fam.cx>
 
 	* ContentChecker.pm (_get_css_parser): New.
